--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,7 +1,8 @@
 /* CSS Global */
 
 /* === importing CSS === */
-@import url("../css/signin.css");
+@import url("signin.css");
+@import url("components.css");
 
 /* === importing fonts into google === */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
@@ -32,5 +33,7 @@
 .container {
   width: 100%;
   height: 100vh;
+  flex-direction: column;
+  gap: 1rem;
   background: var(--blue-400);
 }
