--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -62,6 +62,7 @@
   position: absolute;
   top: 1.5rem;
   left: 0.5rem;
+  pointer-events: none;
   color: var(--blue-200);
 }
 .form-group input {
@@ -89,4 +90,14 @@
   color: var(--beige-color);
   cursor: pointer;
   font-size: 14px;
+}
+label.active {
+  top: -0.3rem;
+}
+.fa-eye {
+  position: absolute;
+  top: 1.6rem;
+  right: 0.8rem;
+  cursor: pointer;
+  color: var(--blue-200);
 }
