--- a/src/css/global.css
+++ b/src/css/global.css
@@ -2,6 +2,7 @@
 
 /* === importing CSS === */
 @import url("signin.css");
+@import url("signup.css");
 @import url("components.css");
 
 /* === importing fonts into google === */
